# CellMorphologyViewer

./: CMakeLists.txt  conanfile.py
.github/workflows/: build.yml
res/: query.q  resources.qrc
res/shaders/: Lines.frag  Model.vert  PassThrough.vert  Quad.frag
src/: CellLoader.cpp  CellLoader.h  CellMorphologyView.cpp  CellMorphologyView.h  CellMorphologyView.json  LayerDrawing.cpp  MorphologyLineRenderer.cpp  MorphologyLineRenderer.h  MorphologyRenderer.cpp  MorphologyRenderer.h  MorphologyTubeRenderer.cpp  MorphologyTubeRenderer.h  MorphologyWidget.cpp  MorphologyWidget.h  Neuron.cpp  Neuron.h  NeuronDescriptor.h  Query.cpp  Query.h  Scene.cpp  Scene.h  SettingsAction.cpp  SettingsAction.h
